route_table.tf

resource "aws_route_table" "route" {
  vpc_id = aws_vpc.E-Commerce-Project.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.IGW.id
  }

  route {
    ipv6_cidr_block = "::/0"
    gateway_id      = aws_internet_gateway.IGW.id
  }

  tags = {
    Name = "Route to internet"
  }
}
